# Distributed_Gang_Scheduling

./: .gitignore  CMakeLists.txt  Freezer  Freezernew  Global_S  Global_sched  Laucher  Local_s  README.md  cctest  cctest.cc  client.cc  client.h  config.ini  ctest  ctest.c  freezer.cc  global_s  global_scheduler.cc  laucher.cc  local_scheduler.cc  server.cc  server.h
JOBS/: Job0  Job1  Job2  Job3  job0.cc  job1.cc
MESSAGES/: message.pb.cc  message.pb.h  message.proto
SCHED_STRATEGY/: strategies.cc  strategies.h
include/: client.h  print_level.h  server.h  strategies.h
lib/ntp-master/: server.c  server.h
lib/ntp_client-Gaa/src/: ntp_client.c  ntp_client.h
lib/ntp_client-Gaa/test/: Ntp_Test
ntp-master/ntp-master/: server.c  server.h
ntp_client-Gaa/src/: ntp_client.c
ntp_client-Gaa/test/: ntp_test.c
src/: client.cc  global_scheduler.cc  laucher.cc  launcher.cc  local_scheduler.cc  print_level.cc  server.cc  strategies.cc
src/JOBS/: Job0  Job4  job0.cc  job1.cc  job2.cc  job3.cc  job4.cc
test/: ibbench.sh
